<resources>
    <string name="app_label">Messaging</string>
    <string name="new_message">New message</string>
    <string name="create_new_message">Compose new message</string>
    <string name="menu_call_back">Call %s</string>
    <string name="menu_send_email">Send email to %s</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_cp_messages">Configuration messages</string>
    <string name="menu_add_address_to_contacts">Add %s to Contacts</string>
    <string name="menu_call">Call</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_undelivered_messages">Undelivered messages</string>
    <string name="menu_view">View thread</string>
    <string name="refreshing">Refreshing…</string>
    <string name="has_draft">Draft</string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="message_viewer_sent_from">Sent from</string>
    <string name="message_viewer_sent_to">Sent to %s</string>
    <string name="message_viewer_received_from">Received from %s</string>
    <string name="view_picture">View picture</string>
    <string name="view_slideshow">View slideshow</string>
    <string name="view_message_details">View message details</string>
    <string name="view_delivery_report">Delivery report</string>
    <string name="delete_message">Delete message</string>
    <string name="sent_on">%s</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">"Unable to send this message.
Attempt made: %s."</string>
    <string name="undelivered_sms_dialog_body">Unable to send this message.</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_send_msg_to">Send msg to %s</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="name_colon"><b>%s</b>": "</string>
    <string name="inline_subject">Subject: %s</string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="copy_message_to_sim">Copy to SIM</string>
    <string name="copy_to_sim_not_available">The message is too large to store as a single message on your SIM.</string>
    <string name="copy_to_sim_number_format_err">Unable to store at your SIM due to invalid address.</string>
    <string name="copy_to_sim_not_available_sim_full">Unable to store at your SIM. SIM card memory is not available.</string>
    <string name="copy_success">Copied successfully.</string>
    <string name="message_options">Message options</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Select to create new slide.</string>
    <string name="discard_slideshow">Cancel slideshow</string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="compose_title">Compose</string>
    <string name="to_hint">To</string>
    <string name="cc_hint">Cc</string>
    <string name="bcc_hint">Bcc</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="add_recipients">Add Cc/Bcc</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="all_threads">All threads</string>
    <string name="type_to_compose_text_enter_to_send">Type to compose</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to compose message</string>
    <string name="image_too_large">Picture too large</string>
    <string name="ask_for_automatically_resize">Automatically resize picture before sending?</string>
    <string name="compressing">Picture too large. Compressing…</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="resize_image_error_information">Sorry, even when resized this picture is too large to send.</string>
    <string name="forward_prefix">"Fwd: "</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="has_invalid_recipient">Invalid recipient(s): &lt;%1$s></string>
    <string name="invalid_destination">You have entered an invalid address.</string>
    <string name="invalid_recipient_message">Please correct the recipient(s) or they will not receive the message.</string>
    <string name="cannot_send_message">Cannot send this message</string>
    <string name="cannot_send_message_reason">Your message has invalid recipient(s).</string>
    <string name="cannot_reply_message_reason">"Your message's recipient has bad number."</string>
    <string name="cannot_forward_drm_obj">The DRM object included in the message cannot be forwarded.</string>
    <string name="file_not_found">File not found</string>
    <string name="attachment_doesnt_exist_in_filesystem">"The attached file doesn't exist in the file system."</string>
    <string name="converting_to_picture_message">Converting to multimedia message…</string>
    <string name="converting_to_text_message">Converting to text message…</string>
    <string name="cannot_add_slide_anymore">Cannot add more slides.</string>
    <string name="cannot_add_picture_and_video">Cannot add video and picture to one slide.</string>
    <string name="cannot_save_message">Cannot save message.</string>
    <string name="cannot_load_message">Cannot load message.</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string name="locked_message_cannot_be_deleted">Locked message cannot be deleted.</string>
    <string name="has_too_many_recipients">This message has too many recipients (%d)</string>
    <string name="recipient_max_limit">Maximum number of recipients is %d</string>
    <string name="too_many_attachments" formatted="false">There is a limit of %1$s attachments. Only the first %2$s will be added.</string>
    <string name="adding_attachments_title">Adding attachments</string>
    <string name="adding_attachments">Please wait while the items are added to the slideshow.</string>
    <string name="cannot_play_audio">Cannot play audio.</string>
    <string name="preview">Preview</string>
    <string name="preview_slideshow">Preview</string>
    <string name="replace_image">Replace picture</string>
    <string name="duration_sec">Duration (%s sec)</string>
    <string name="duration_selector_title">"Duration for slide "</string>
    <string name="layout_selector_title">"Slideshow layout "</string>
    <string name="layout_top">Layout (top)</string>
    <string name="layout_bottom">Layout (bottom)</string>
    <string name="type_to_compose_text_or_leave_blank">Type to compose text, or leave blank</string>
    <string name="duration_not_a_number">Duration must be a number</string>
    <string name="duration_zero">Duration must be greater than zero seconds</string>
    <string name="secs">secs</string>
    <string name="menu_view_contact">View contact</string>
    <string name="menu_add_to_contacts">Add to Contacts</string>
    <string name="hidden_sender_address">Hidden sender address</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="set">Set</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="resize">Resize</string>
    <string name="try_to_send">Try to send</string>
    <string name="preferences_title">Settings</string>
    <string name="restore_default">Restore default settings</string>
    <string name="restore_default_confirm">Message settings will be restored. Continue?</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">Multimedia message (MMS) settings</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_sms_storage_title">Storage settings</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="cmas_message_id">Message ID :</string>
    <string name="cmas_cmae_category">Alert Category:</string>
    <string name="cmas_service_category_broadcast">"Service Category
 Broadcast :"</string>
    <string name="cmas_response_type">Response Type:</string>
    <string name="cmas_severity">Severity:</string>
    <string name="cmas_certainity">Certainity:</string>
    <string name="cmas_receive_alests">Receive Alerts</string>
    <string name="cmas_presidential_alerts">Presidential alerts</string>
    <string name="cmas_receive_presidental_alerts">Mandatory alerts</string>
    <string name="cmas_extreme_alerts">Extreme alerts</string>
    <string name="cmas_receive_extreme_alerts">Extreme threat to life and property</string>
    <string name="cmas_severe_alerts">Severe alerts</string>
    <string name="cmas_receive_severs_alerts">Severe threat to life and property</string>
    <string name="cmas_amber_alerts">AMBER alerts</string>
    <string name="cmas_receive_child_abduction_emergency_alerts">Child abduction emergency alerts</string>
    <string name="cmas_cmas_test_message">CMAS Test Messages</string>
    <string name="cmas_cmas_ui">Receiving Settings</string>
    <string name="emergency_tone">Emergency tone</string>
    <string name="emergency_summary">Tap here to play the tone</string>
    <string name="cmas_font_size">Alert reminder</string>
</resources>