<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout01" android:background="@drawable/white_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:orientation="vertical" android:id="@id/RelativeLayout01" android:background="@drawable/white_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/cmas_more_info" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_msg_id_menu" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="140.0px" android:minWidth="130.0px" android:text="@string/cmas_message_id" android:layout_below="@id/cmas_more_info" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_msg_id_value" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@id/TextView01" android:layout_toRightOf="@id/cmas_msg_id_menu" android:layout_below="@id/cmas_more_info" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_cmae_category_menu" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="140.0px" android:minWidth="130.0px" android:text="@string/cmas_cmae_category" android:layout_below="@id/cmas_msg_id_menu" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_cmae_category_value" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@id/TextView02" android:layout_toRightOf="@id/cmas_cmae_category_menu" android:layout_below="@id/cmas_msg_id_value" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_service_category_menu" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="140.0px" android:minWidth="130.0px" android:text="@string/cmas_service_category_broadcast" android:lines="2" android:layout_below="@id/cmas_cmae_category_menu" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_service_category_value" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@id/TextView03" android:lines="2" android:layout_toRightOf="@id/cmas_service_category_menu" android:layout_below="@id/cmas_cmae_category_value" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_response_type_menu" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="140.0px" android:minWidth="130.0px" android:text="@string/cmas_response_type" android:layout_below="@id/cmas_service_category_menu" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_response_type_value" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@id/TextView04" android:layout_toRightOf="@id/cmas_service_category_menu" android:layout_below="@id/cmas_service_category_value" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_severity_menu" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="140.0px" android:minWidth="130.0px" android:text="@string/cmas_severity" android:layout_below="@id/cmas_response_type_menu" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_severity_value" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@id/TextView05" android:layout_toRightOf="@id/cmas_response_type_menu" android:layout_below="@id/cmas_response_type_value" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_urgency_menu" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="140.0px" android:minWidth="130.0px" android:text="@string/cmas_urgency " android:layout_below="@id/cmas_severity_menu" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_urgency_value" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@id/TextView06" android:layout_toRightOf="@id/cmas_severity_menu" android:layout_below="@id/cmas_severity_value" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_certainity_menu" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="140.0px" android:minWidth="130.0px" android:text="@string/cmas_certainity" android:layout_below="@id/cmas_urgency_menu" />
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/cmas_certainity_value" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@id/TextView07" android:layout_toRightOf="@id/cmas_certainity_menu" android:layout_below="@id/cmas_urgency_value" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
