<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewStub android:id="@id/contact_header" android:visibility="gone" android:layout="@layout/message_contact_header" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:id="@id/recipients_subject_linear" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/recipients_field" android:background="@drawable/msg_header" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/recipients_field_to" android:visibility="gone" android:addStatesFromChildren="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="53.0dip">
                <com.android.mms.ui.RecipientsEditor android:textSize="16.0sp" android:id="@id/recipients_editor_to" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="4.0dip" android:hint="@string/to_hint" android:inputType="textFilter" android:privateImeOptions="inputType=mmsRecipient" />
                <TextView android:textSize="14.329987sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/text_to_counter" android:background="#88000000" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginRight="3.0dip" android:maxLines="1" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <ViewStub android:id="@id/add_recipient_button_stub" android:visibility="gone" android:layout="@layout/add_recipients_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" />
        </LinearLayout>
        <EditText android:textSize="16.0sp" android:id="@id/subject" android:visibility="gone" android:nextFocusDown="@id/embedded_text_editor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="4.0dip" android:hint="@string/subject_hint" android:singleLine="true" android:maxLength="80" android:capitalize="sentences" android:autoText="true" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="#88000000" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <view android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:id="@id/history" android:visibility="gone" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/chat_history_selector" android:drawSelectorOnTop="true" android:stackFromBottom="false" android:transcriptMode="alwaysScroll" android:cacheColorHint="@android:color/transparent" android:divider="@android:drawable/divider_horizontal_bright" android:layout_weight="1.0" class="com.android.mms.ui.MessageListView" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:orientation="horizontal" android:id="@id/attachment_list_view" android:focusable="false" android:focusableInTouchMode="false" android:visibility="gone" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <ListView android:id="@id/attchment_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:stackFromBottom="true" android:divider="@android:color/transparent" />
                    </LinearLayout>
                    <view android:orientation="vertical" android:id="@id/attachment_editor" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" class="com.android.mms.ui.AttachmentEditor">
                        <ViewStub android:id="@id/image_attachment_view_portrait_stub" android:layout="@layout/image_attachment_view_portrait" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <ViewStub android:id="@id/video_attachment_view_portrait_stub" android:layout="@layout/video_attachment_view_portrait" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <ViewStub android:id="@id/audio_attachment_view_portrait_stub" android:layout="@layout/audio_attachment_view_portrait" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <ViewStub android:id="@id/slideshow_attachment_view_portrait_stub" android:layout="@layout/slideshow_attachment_view_portrait" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <ViewStub android:id="@id/image_attachment_view_landscape_stub" android:layout="@layout/image_attachment_view_landscape" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <ViewStub android:id="@id/video_attachment_view_landscape_stub" android:layout="@layout/video_attachment_view_landscape" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <ViewStub android:id="@id/audio_attachment_view_landscape_stub" android:layout="@layout/audio_attachment_view_landscape" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <ViewStub android:id="@id/slideshow_attachment_view_landscape_stub" android:layout="@layout/slideshow_attachment_view_landscape" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    </view>
                </LinearLayout>
            </ScrollView>
            <LinearLayout android:orientation="horizontal" android:id="@id/bottom_panel" android:background="@drawable/msg_input_bg" android:paddingLeft="1.0dip" android:paddingTop="6.0dip" android:paddingRight="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@id/editor_with_counter" android:addStatesFromChildren="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <EditText android:scrollbarStyle="outsideOverlay" android:textSize="16.0sp" android:id="@id/embedded_text_editor" android:background="@android:drawable/edit_text" android:scrollbars="vertical" android:nextFocusRight="@id/send_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/type_to_compose_text_enter_to_send" android:capitalize="sentences" android:autoText="true" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeOptions="actionSend|flagNoEnterAction" />
                    <TextView android:textSize="11.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/text_counter" android:background="#88000000" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
                </RelativeLayout>
                <Button android:textSize="16.0sp" android:layout_gravity="center_vertical" android:id="@id/send_button" android:nextFocusLeft="@id/embedded_text_editor" android:layout_width="74.0dip" android:layout_height="fill_parent" android:layout_marginBottom="1.0dip" android:text="@string/send" style="?android:attr/buttonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
